--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,21 @@
 #app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.logo {
+    width: 120px;
+    border-radius: 8px;
+}
+
+.video {
+    width: 320px;
+    border: 1px solid #dbdbdb;
+    margin: 16px;
+    border-radius: 4px;
 }
