1. 修改 README.md
2. 实现 Web 浏览器的扫描识别功能

3. 改为 TypeScript 支持

4. 修正 index.html

5. 引入 ant-design-vue

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,41 @@
     margin: 16px;
     border-radius: 4px;
 }
+
+.result {
+    letter-spacing: 2px;
+}
+
+.ant-modal-title,
+.ant-modal-body p {
+    letter-spacing: 2px;
+}
+
+.photograph {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+}
+
+.ant-btn {
+    border-radius: 4px;
+    letter-spacing: 2px;
+}
+
+.file {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 290px;
+    height: 40px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.preview {
+    width: 320px;
+    border-radius: 8px;
+    margin: 16px;
+}
