--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: 16px;
     position: relative;
 }
 
